<resources>
    <string name="app_name">Party Games</string>
    <string name="title_activity_main_menu">Party Games</string>

    <string name="action_settings">Settings</string>
    <string name="nextString">Next</string>
    <string name="banner_ad_unit_id">ca-app-pub-1227361330330418/6799856087</string>
    <string name="adsInterstitialID">ca-app-pub-1227361330330418/4250015682</string>
    <string name="app_id">1624377927833115</string>
    <string name="share_text">Share</string>
    <string name="noMoreOptions">No more options available at the moment, please restart the game to start over!!</string>
    <string name="getReady">Get Ready...</string>
    <string name="selectGame" >Try one of our extra games..</string>
   //I Never Strings

    <string name="INevertitle">Never have I ever.. </string>
    <string name="IneverDescription">A sentence will appear in screen, anyone which is not identified with it must DRINK!!!\n Be Honest and have fun!!! </string>
    <string name="IneverDifficultySelect">Choose the innocence of the sentences</string>
    <string name='easy'>Angel Level</string>
    <string name='medium'>HOT!\nHOT!\nHOT!</string>
    <string name='hard'> A little bit of both</string>
    <string name="IneverPostImage">http://scontent-gru.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/11081467_831485430234404_7159253971600731338_n.png?oh=693feffdfa3a5dd0fe3e1a6f09a8aa39&amp;oe=55AC4C31</string>
    <string name="iNeverPostTitle">Never have i ever</string>


    //Wheel
    <string name="title_activity_truth_dare_gameplay">truthDareGameplay</string>
    <string name="TruthDareDescription">You will be faced with different options, once you choose someone you will have to hand the device to that person!!\n HAVE FUN!</string>
    <string name="vendettaTitle">Vendetta</string>
    <string name="targetTitle">Target Drink</string>
    <string name="chaosTitle">Chaos Rule</string>
    <string name="sacrificeTitle">Sacrifice</string>
    <string name="globalTitle">Global Drink</string>
    <string name="cleanseTitle">Healing</string>
    <string name="drinkTitle">Drink</string>
    <string name="truthTitle">Truth</string>
    <string name="randomTitle">Random</string>

    //Marry / Kill
    <string name="title_activity_marry_kill">MarryKill</string>
    <string name="marryKillTitle">Marry-Kill-F**k</string>
    <string name="mkfPostImage">http://scontent-gru.xx.fbcdn.net/hphotos-xat1/v/t1.0-9/10423785_831485426901071_6961001977131207866_n.png?oh=67f2b3e78d974664f41183c4ef209cb9&amp;oe=5570BE4C</string>
    <string name="mkfTitle">Marry, Kill, F**k</string>
    <string name="mkfInfo">*Tap the names for information</string>
    <string name="mkfPostText" >Marry one, kill one and F**K one</string>


    //Charades Strings
    <string name="mimicTitle">Charades</string>
    <string name="title_activity_mimic_gameplay">MimicGameplay</string>
    <string name="mimicDescription">You have to "act out" a movie title without speaking, while the other members of your team try to guess which movie it is</string>
    <string name="charadesTitle">Charades</string>
    <string name="wheelTitle">Drinking Wheel</string>
    <string name="showWoman">Show me the Girls</string>
    <string name="showMen">Give me boys</string>
    <string name="showBoth">I Don\'t Care</string>
    <string name="firstTitle">You will have to decide which one</string>
    <string name="secondTitle">You Kill, You Marry</string>
    <string name="thirdTitle">or you F**K</string>
    <string name="timeout">TIME-OUT!!!\n Time to DRINK!!</string>
    <string name="tapToContinue">Tap anywhere to continue...</string>

    <string name="mediumTime">2 min</string>
    <string name="lightTime">1 min</string>
    <string name="hardTime">3 min</string>
    <string name="timeLimitText">Select time limit</string>
    <string name="Start">Start</string>
    <string name="Next">Skip</string>
    <string name="facebookError">You need the Facebook App installed on your device.</string>
    <string name="title_activity_activity_spinwheel_gameplay">activity_spinwheel_gameplay</string>
    <string name="spinWheel">Spin the Wheel</string>
    <string name="goodLuck">Good Luck !!</string>
    <string name="spinTitle">Spin and Drink</string>
    <string name="truth">Pick someone to tell the truth!! (or next time he/she drinks x2)</string>
    <string name="oneShot">You Drink one shot</string>
    <string name="vendetta">Vendetta: the last one that make you drink, drinks (even yourself)</string>
    <string name="cleanse">Players with Chaos Rules must drink to cleanse them. If there are no played rules, you drink.</string>
    <string name="sacrifice">For every drink you take, pick one victim to drink with you (you can drink all the times you want)</string>
    <string name="global">Everybody Drinks!</string>
    <string name="target">Pick someone to drink"</string>
    <string name="backButton">OK</string>
    <string name="playTab">Play</string>
    <string name="historyTab">History</string>
 <string name="nothingToShow">No items to show</string>
    <string name="playButton">Play!</string>
    <string name="rateText">Please rate this application. Help us get better and better!</string>
    <string name="rateApptext">Rate!!</string>
    <string name="remindLater">Not now</string>
    <string name="wheelDescription1" >After spinning the wheel, and doing what the game tells you to do, hand the device to the player to your right.</string>
    <string name="wheelDescription2" >Chaos rules last forever or until a "Healing Glass" is played.</string>
    <string name="wheelDescription3" >One turn = One complete round</string>
    <string name="changeLanguage">Change Language</string>
    <string name="spanishLanguage">Español</string>
    <string name="EnglishLanguage">English</string>
    <string name="developers">Gonzalo Conte \n Pablo Conde</string>
    <string name="qas">Agustin Sraer \n Carlos Ramos \n Cristina Rodriguez \n Ignacio Sraer \n Juan Alcoba \n Leonel Landaburu \n Rodrigo Morganti </string>
    <string name="createdBy">Created By</string>
    <string name="developedBy">Developed By</string>
    <string name="qualityAssurance">Special Thanks</string>
    <string name="creator">Decote Apps</string>
    <string name="addRule">Add Rule</string>
    <string name="myRulesText">Adding a rule will give it the possibility to be rolled when playing a Chaotic Rule.</string>
    <string name="CustomRuleTitle">Custom Rule</string>
    <string name="rulesTitle">My rules</string>
    <string name="addRuleIndication">Write the rule you want to add</string>
    <string name="addRulePopUpTitle">Add Rule</string>
    <string name="cancel">Cancel</string>
    <string name="modify">Accept</string>
    <string name="changeRule">Change Rule</string>
    <string name="noRules">There are no rules yet..</string>
    <string name="myrulestext">My rules</string>
    <string name="myServerRulesText">Tap any rule to add them to your list. For each time the rule is added to your list, the more chances it has of getting rolled</string>
    <string name="PopularToday">Popular Today</string>
    <string name="Recent">Recent</string>
    <string name="ruleAddConfirmation">Are you Sure yo want to add this rule?</string>
    <string name="yes">Yes</string>
    <string name="confirmationDelete">Are you Sure yo want to delete this rule?</string>
    <string name="myRulesTabName">My Rules</string>
    <string name="customRule">Custom Rule</string>
    <string name="popularRuleTitle">Popular</string>
    <string name="recentRuleTitle">Recent</string>
    <string name="connectionError">Could not retrieve data. Please verify that you has internet access and try again</string>
    <string name="loading">Loading...</string>
    <string name="devilTitle">The Devil!</string>
    <string name="drunkMeter">Drunk-o-meter</string>
    <string name="wheelDescription0">Rules applied by THE DEVIL cannot be cleaned, only replaced by other Devil Rule. Only 1 Devil Rule can be applied at the same time for each player.</string>

</resources>
