<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.concon.talkabout.talkabout.IneverGameplay">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">

        </com.google.android.gms.ads.AdView>

    <com.concon.talkabout.talkabout.elements.TitleFun
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/adView"
        android:gravity="center"
        android:text="@string/INevertitle"
        android:textColor="@color/orange"
        android:textSize="@dimen/section_title_text" />

    <com.concon.talkabout.talkabout.elements.TextViewFun
        android:id="@+id/phrase"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textView"
        android:gravity="center"
        android:clickable="true"
        android:onClick="changeTopic"
        android:padding="10dp"
        android:text="@string/getReady"
        android:textColor="@drawable/text"
        android:textSize="@dimen/gameplay_text"
        android:layout_above="@+id/shareButtonInever" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/share_text"
        android:textSize="@dimen/indication_text"
        android:onClick="shareInever"
        android:drawableTop="@drawable/button_share"
        android:background="@null"
        android:textColor="@color/black"
        android:layout_above="@+id/indicatorContainer"
        android:layout_centerHorizontal="true"
        android:id="@+id/shareButtonInever" />

    <com.concon.talkabout.talkabout.elements.TextViewFun
        android:id="@+id/indicatorContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/tapToContinue"
        android:textColor="@color/orange"
        android:textSize="@dimen/indication_text"
        android:clickable="true"
        android:onClick="changeTopic"/>

</RelativeLayout>
