<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.concon.talkabout.talkabout.SpinWheelMainMenu">

    <com.concon.talkabout.talkabout.elements.TextViewFun
        android:id="@+id/aboutTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="@dimen/menu_text_size"
        android:gravity="center"
        android:textColor="@color/black"
        android:padding="10dp"/>


    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/aboutTitle"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:layout_above="@+id/linearLayout2">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <com.concon.talkabout.talkabout.elements.TextViewFun
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/createdBy"
                android:textSize="@dimen/gameplay_button_text"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/darkred"
                />
            <com.concon.talkabout.talkabout.elements.TextViewFun
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/creator"
                android:textColor="@color/black"
                android:textSize="@dimen/gameplay_button_text"
                android:textStyle="italic"
                android:typeface="normal"
                android:drawablePadding="10dp"
                android:layout_marginBottom="10dp"/>
            <com.concon.talkabout.talkabout.elements.TextViewFun
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/developedBy"
                android:textSize="@dimen/gameplay_button_text"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/darkred"
                />
            <com.concon.talkabout.talkabout.elements.TextViewFun
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/developers"
                android:textColor="@color/black"
                android:textSize="@dimen/gameplay_button_text"
                android:textStyle="italic"
                android:typeface="normal"
                android:drawablePadding="10dp"
                android:layout_marginBottom="10dp"/>
            <com.concon.talkabout.talkabout.elements.TextViewFun
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/qualityAssurance"
                android:textSize="@dimen/gameplay_button_text"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/darkred"
                />
            <com.concon.talkabout.talkabout.elements.TextViewFun
                android:id="@+id/phrase"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/qas"
                android:textColor="@color/black"
                android:textSize="@dimen/gameplay_button_text"
                android:textStyle="italic"
                android:typeface="normal"
                android:drawablePadding="10dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/carrousel"
        android:padding="5dp">

        <com.concon.talkabout.talkabout.elements.ButtonFun
            android:id="@+id/startWheel"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:onClick="backtoMenu"
            android:text="@string/backButton"
            android:textSize="@dimen/gameplay_button_text"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>
