<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/historyPage"
    android:background="@drawable/background"
    >
    <com.concon.talkabout.talkabout.elements.TitleFun
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rulesTitle"
        android:id="@+id/title"
        android:textSize="45sp"
        android:textColor="@color/black"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:paddingTop="10dp"/>
    <com.concon.talkabout.talkabout.elements.TextViewFun
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/myRulesText"
        android:textColor="@color/white"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/instructions"
        android:gravity="center"
        android:padding="10dp"
        />
    <com.concon.talkabout.talkabout.elements.TextViewFun
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/addRule"
        android:id="@+id/view"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_below="@+id/instructions"
        android:layout_toLeftOf="@+id/addIcon"
        android:layout_toStartOf="@+id/addIcon"
        android:layout_marginRight="5dp"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/add_icon"
        android:clickable="true"
        android:onClick="addRule"
        android:id="@+id/addIcon"
        android:layout_below="@+id/instructions"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"/>


<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_below="@+id/view"
    android:id="@+id/linearLayout4">
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@android:id/list"
         />

    <com.concon.talkabout.talkabout.elements.TextViewFun
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noRules"
        android:textColor="@color/blackAlpha"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/section_title_text"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    </RelativeLayout>


</RelativeLayout>