<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.concon.talkabout.talkabout.SpinWheelMainMenu">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>

    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/adView"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:layout_above="@+id/linearLayout2">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <com.concon.talkabout.talkabout.elements.TextViewFun
            android:id="@+id/phrase0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|start"
            android:padding="10dp"
            android:text="@string/wheelDescription0"
            android:textColor="@color/black"
            android:textSize="@dimen/gameplay_button_text"
            android:textStyle="italic"
            android:typeface="normal"
            android:drawableStart="@drawable/devil"
            android:drawableLeft="@drawable/devil"
            android:drawablePadding="10dp"
            android:layout_marginBottom="10dp"/>
        <com.concon.talkabout.talkabout.elements.TextViewFun
            android:id="@+id/phrase"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:gravity="center|end"
            android:text="@string/wheelDescription1"
            android:textColor="@color/black"
            android:textSize="@dimen/gameplay_button_text"
            android:textStyle="italic"
            android:typeface="normal"
            android:drawableEnd="@drawable/arrow_circle"
            android:drawableRight="@drawable/arrow_circle"
            android:drawablePadding="10dp"
            android:layout_marginBottom="10dp"/>
        <com.concon.talkabout.talkabout.elements.TextViewFun
            android:id="@+id/phrase2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|start"
            android:padding="10dp"
            android:text="@string/wheelDescription2"
            android:textColor="@color/black"
            android:textSize="@dimen/gameplay_button_text"
            android:textStyle="italic"
            android:typeface="normal"
            android:drawableStart="@drawable/skullcircle"
            android:drawableLeft="@drawable/skullcircle"
            android:drawablePadding="10dp"
            android:layout_marginBottom="10dp"/>
        <com.concon.talkabout.talkabout.elements.TextViewFun
            android:id="@+id/phrase3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|end"
            android:padding="10dp"
            android:text="@string/wheelDescription3"
            android:textColor="@color/black"
            android:textSize="@dimen/gameplay_button_text"
            android:textStyle="italic"
            android:typeface="normal"
            android:drawablePadding="10dp"
            android:drawableEnd="@drawable/circle_turn"
            android:drawableRight="@drawable/circle_turn"
            android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/carrousel"
        android:padding="5dp">

        <com.concon.talkabout.talkabout.elements.ButtonFun
            android:id="@+id/startWheel"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:onClick="startWheel"
            android:text="@string/Start"
            android:textSize="@dimen/gameplay_button_text"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>
