<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.concon.talkabout.talkabout.CharadesGameplay"
    android:background="@drawable/background">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
    </com.google.android.gms.ads.AdView>

        <com.concon.talkabout.talkabout.elements.TitleFun
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mimicTitle"
            android:id="@+id/textView"
            android:textSize="@dimen/section_title_text"
            android:textColor="@color/orange"
            android:layout_below="@+id/adView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center"/>
    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:layout_above="@+id/timer"
        android:layout_below="@+id/textView">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">
            <com.concon.talkabout.talkabout.elements.TextViewFun
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/getReady"
                android:id="@+id/phrase"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:textColor="@drawable/text"
                android:textSize="@dimen/gameplay_text"
                android:layout_weight="0.65" />
            <com.concon.talkabout.talkabout.elements.TextViewFun
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/gameplay_text"
                android:id="@+id/nextStartCharades"
                android:textColor="@color/orange"
                android:background="@drawable/button_gameplay_behavior"
                android:padding="5dp"
                android:text="@string/Start"
                android:clickable="true"
                android:onClick="getMimic"
                 />
            </LinearLayout>

    </ScrollView>



    <com.concon.talkabout.talkabout.elements.TextViewFun
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/gameplay_text"
        android:id="@+id/timer"
        android:textColor="@color/orange"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
