<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/historyPage"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:background="@color/blackAlpha">

        <com.concon.talkabout.talkabout.elements.TextViewFun
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/myServerRulesText"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/instructions"
            android:gravity="center"
            android:padding="10dp"
            />

        <com.concon.talkabout.talkabout.elements.TextViewFun
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/myrulestext"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:id="@+id/myrulestitle"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="25sp"
            android:layout_below="@id/instructions"
            />

    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/swipe_container"
        android:layout_below="@+id/relativeLayout">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@android:id/list" />

    </android.support.v4.widget.SwipeRefreshLayout>

        <com.concon.talkabout.talkabout.elements.TextViewFun
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noRules"
            android:textColor="@color/blackAlpha"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/section_title_text"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />


</RelativeLayout>